--- a/src/style/progress.module.css
+++ b/src/style/progress.module.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  border-top: 1px solid #E6E6EB;
 }
 
 :global(button) {
@@ -11,6 +12,7 @@
 
 .btnGroup {
   width: auto;
+  padding-top: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,12 +20,12 @@
 
 .nextBtn {
   width: 180px;
-  height: 46px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-color: transparent;
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: #F67599;
 }
 
