--- a/src/style/footer.module.css
+++ b/src/style/footer.module.css
@@ -1,3 +1,10 @@
+:global(footer) {
+  width: 100%;
+  height: 250px;
+  position: relative;
+  background-color: #F6F7F8;
+}
+
 .footerContainer {
   width: 90%;
   margin: auto;
