--- a/src/style/header.module.css
+++ b/src/style/header.module.css
@@ -1,3 +1,13 @@
+:global(header) {
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  background-color: #fff;
+}
+
 .headerContainer {
   width: 100%;
   height: 100%;
