--- a/src/style/formAddress.module.css
+++ b/src/style/formAddress.module.css
@@ -1,3 +1,8 @@
+.addFormContainer {
+  width: 100%;
+  height: 100%;
+}
+
 .formTitle {
   margin-bottom: 20px;
   font-size: 24px;
@@ -39,8 +44,17 @@
   grid-area: A;
 }
 
+.countySelect {
+  -webkit-appearance: none;
+  height: 40px;
+  width: 100%;
+  border: 1px solid #4A4A4A;
+  border-radius: 5px;
+  font-size: 12px;
+  color: inherit;
+}
 
-:global(select) {
+.sexSelect {
   -webkit-appearance: none;
   height: 40px;
   width: 100%;
@@ -49,11 +63,15 @@
   font-size: 12px;
 }
 
-:global(select:invalid) {
+.countySelect:invalid {
   color: #747474;
 }
 
-:global(input) {
+.countySelect option:not(:first-child) {
+  color: black;
+}
+
+.input {
   -webkit-appearance: none;
   height: 40px;
   width: 100%;
